# Projeto-API-restaurante

./: .env  LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: settings.py
app/crud/: order.py  user.py
app/db/: database.py
app/models/: order.py  user.py
app/routers/: order_routes.py  user_routes.py
app/service/: dependencies.py
app/utils/: address_validator.py  auth.py  geo.py
